--- a/src/main/webapp/WEB-INF/views/modules/mobile/home.html
+++ b/src/main/webapp/WEB-INF/views/modules/mobile/home.html
@@ -65,7 +65,7 @@
             <div class="icon">
               <i class="fa fa-shopping-cart"></i>
             </div>
-            <a href="#" class="small-box-footer"  @click="goUrl">
+            <a href="#" class="small-box-footer"  @click="goUrl(item.groupId)">
               	更多信息 <i class="fa fa-arrow-circle-right"></i>
             </a>
           </div>
@@ -103,9 +103,9 @@
 						});
 					});
 				},
-				goUrl:function(){
-					parent.location.href ='group_type.html';
-					//window.location.href = "${request.contextPath}/staworkgroup/toGroupType?groupId="+groupId;
+				goUrl:function(groupId){
+					//parent.location.href ='group_type.html';
+					window.location.href = "${request.contextPath}/staworkgroup/toGroupType?groupId="+groupId;
 				},
 				toMyInfo: function(){
 					window.location.href = "${request.contextPath}/baspatient/toMyInfo";
