--- a/src/main/webapp/WEB-INF/views/modules/mobile/group_type.html
+++ b/src/main/webapp/WEB-INF/views/modules/mobile/group_type.html
@@ -54,12 +54,13 @@
           <div class="small-box bg-yellow">
             <div class="inner">
               <h4>发电机</h4>
-              <p>1</p>
-              <p>2</p>
-              <p>3</p>
-              <p>4</p>
-              <p>5</p>
-              <p>6</p>
+              <p typeId="1">1</p>
+              <p typeId="2">2</p>
+              <p typeId="3">3</p>
+              <p typeId="4">4</p>
+              <p typeId="5">5</p>
+              <p typeId="6">6</p>
+              <p>&nbsp;</p>
             </div>
             <a href="#" class="small-box-footer">
               	更多信息 <i class="fa fa-arrow-circle-right"></i>
@@ -71,13 +72,13 @@
           <div class="small-box bg-green">
             <div class="inner">
               <h4>水轮机</h4>
-              <p>7</p>
-              <p>8</p>
-              <p>9</p>
-              <p>10</p>
-              <p>11</p>
-	          <p>12</p>
-	          <p>13</p>
+              <p typeId="7">7</p>
+              <p typeId="8">8</p>
+              <p typeId="9">9</p>
+              <p typeId="10">10</p>
+              <p typeId="11">11</p>
+	          <p typeId="12">12</p>
+	          <p typeId="13">13</p>
             </div>
             <a href="#" class="small-box-footer">
               	更多信息 <i class="fa fa-arrow-circle-right"></i>
@@ -85,28 +86,35 @@
           </div>
         </div>
         
-        <div class="col-lg-3 col-xs-6">
+        <!-- <div class="col-lg-3 col-xs-6">
           <div class="small-box bg-aqua">
             <div class="inner">
               <h4>并网参数</h4>
-              <p>1</p>
-              <p>2</p>
-              <p>3</p>
-              <p>4</p>
-              <p>5</p>
-              <p>6</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
             </div>
             <a href="#" class="small-box-footer">
               	更多信息 <i class="fa fa-arrow-circle-right"></i>
             </a>
           </div>
-        </div>
+        </div> -->
         
         <div class="col-lg-3 col-xs-6">
           <div class="small-box bg-purple">
             <div class="inner">
               <h4>水位</h4>
-              <p>14</p>
+              <p typeId="14">14</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
             </div>
             <a href="#" class="small-box-footer">
               	更多信息 <i class="fa fa-arrow-circle-right"></i>
@@ -177,7 +185,7 @@
 		        				for(var j = 0 ; j < pArray.length ; j++){
 		        					//根据模版匹配对应信息
 		        					for(var x = 0 ; x < data.length ; x++){
-		        						if($(pArray[j]).html() == data[x].type_id){
+		        						if($(pArray[j]).attr("typeId") == data[x].type_id){
 		        							$(pArray[j]).text(data[x].type_name + ":" + data[x].param_value);
 		        						}
 		        					}
@@ -188,7 +196,7 @@
 		        },
 		        cxtTimer: function(){
 		        	var ref = "";
-		        	ref = setInterval(() => { this.getDetailed(); }, 60*1000);
+		        	ref = setInterval(() => { this.getDetailed(); }, 1000);
 		        }
 			},
 			created: function(){
