数据显示项修改

--- a/src/main/webapp/WEB-INF/views/modules/mobile/group_type.html
+++ b/src/main/webapp/WEB-INF/views/modules/mobile/group_type.html
@@ -34,38 +34,97 @@
 		<div class="nd2-card card-media-right card-media-small" @click="showDetailData">
 			<div class="card-title">
 				<h3 class="card-primary-title">水力系统</h3>
-				<h5 class="card-subtitle" typeId="7"></h5>
-				<h5 class="card-subtitle" typeId="8"></h5>
+				<h5 class="card-subtitle" typeId="126"></h5>
+				<h5 class="card-subtitle" typeId="127"></h5>
 				<h5 class="card-subtitle" typeId="9"></h5>
-				<h5 class="card-subtitle" typeId="10"></h5>
-				<h5 class="card-subtitle" typeId="11"></h5>
-				<h5 class="card-subtitle" typeId="12"></h5>
-				<h5 class="card-subtitle" typeId="13"></h5>
+				<h5 class="card-subtitle" typeId="44"></h5>
+				<h5 class="card-subtitle" typeId="128"></h5>
+				<h5 class="card-subtitle" typeId="129"></h5>
+				<h5 class="card-subtitle" typeId="130"></h5>
+				
+				<h5 class="card-subtitle">额定转速</h5>
+				<h5 class="card-subtitle" typeId="169"></h5>
+				<h5 class="card-subtitle" typeId="170"></h5>
+				
+				<!-- <h5 class="card-subtitle" typeId="130"></h5>
+				<h5 class="card-subtitle" typeId="130"></h5> -->
 			</div>
 		</div>
 		
 		<div class="nd2-card card-media-right card-media-small" @click="showDetailData">
 			<div class="card-title">
 				<h3 class="card-primary-title">发电机</h3>
+				<!-- 定子温度 -->
 				<h5 class="card-subtitle" typeId="1"></h5>
 				<h5 class="card-subtitle" typeId="2"></h5>
 				<h5 class="card-subtitle" typeId="3"></h5>
 				<h5 class="card-subtitle" typeId="4"></h5>
 				<h5 class="card-subtitle" typeId="5"></h5>
 				<h5 class="card-subtitle" typeId="6"></h5>
+				<h5 class="card-subtitle" typeId="7"></h5>
+				<h5 class="card-subtitle" typeId="8"></h5>
+				<h5 class="card-subtitle" typeId="9"></h5>
+				<h5 class="card-subtitle" typeId="10"></h5>
+				<h5 class="card-subtitle" typeId="11"></h5>
+				<h5 class="card-subtitle" typeId="12"></h5>
+				<!-- 空冷温度 -->
+				<h5 class="card-subtitle" typeId="13"></h5>
+				<h5 class="card-subtitle" typeId="14"></h5>
+				<h5 class="card-subtitle" typeId="15"></h5>
+				<h5 class="card-subtitle" typeId="16"></h5>
+				<h5 class="card-subtitle" typeId="17"></h5>
+				<h5 class="card-subtitle" typeId="18"></h5>
+				<h5 class="card-subtitle" typeId="19"></h5>
+				<h5 class="card-subtitle" typeId="20"></h5>
+				<!-- 空冷器温度 -->
+				<h5 class="card-subtitle" typeId="21"></h5>
+				<h5 class="card-subtitle" typeId="22"></h5>
 			</div>
 		</div>
 		
 		<div class="nd2-card card-media-right card-media-small" @click="showDetailData">
 			<div class="card-title">
 				<h3 class="card-primary-title">机组振动</h3>
-				<h5 class="card-subtitle" typeId="14"></h5>
+				<!-- 振动 -->
+				<h5 class="card-subtitle" typeId="65"></h5>
+				<h5 class="card-subtitle" typeId="66"></h5>
+				<h5 class="card-subtitle" typeId="67"></h5>
+				<h5 class="card-subtitle" typeId="68"></h5>
+				<!-- 摆动 -->
+				<h5 class="card-subtitle" typeId="73"></h5>
+				<h5 class="card-subtitle" typeId="74"></h5>
+				<h5 class="card-subtitle" typeId="75"></h5>
+				<h5 class="card-subtitle" typeId="76"></h5>
 			</div>
 		</div>
 		
 		<div class="nd2-card card-media-right card-media-small" @click="showDetailData">
 			<div class="card-title">
 				<h3 class="card-primary-title">机组轴承</h3>
+				<h5 class="card-subtitle" typeId="27"></h5>
+				<h5 class="card-subtitle" typeId="28"></h5>
+				
+				<h5 class="card-subtitle" typeId="29"></h5>
+				<h5 class="card-subtitle" typeId="30"></h5>
+				
+				<h5 class="card-subtitle" typeId="31"></h5>
+				<h5 class="card-subtitle" typeId="32"></h5>
+				
+				<h5 class="card-subtitle" typeId="33"></h5>
+				<h5 class="card-subtitle" typeId="34"></h5>
+				<h5 class="card-subtitle" typeId="35"></h5>
+				<h5 class="card-subtitle" typeId="36"></h5>
+				
+				<h5 class="card-subtitle" typeId="37"></h5>
+				<h5 class="card-subtitle" typeId="38"></h5>
+				
+				<h5 class="card-subtitle" typeId="39"></h5>
+				<h5 class="card-subtitle" typeId="40"></h5>
+				
+				<h5 class="card-subtitle" typeId="41"></h5>
+				<h5 class="card-subtitle" typeId="42"></h5>
+				
+				<h5 class="card-subtitle" typeId="43"></h5>
 			</div>
 		</div>		
 	</div>
