点击数据项目后不跳转

--- a/src/main/webapp/WEB-INF/views/modules/mobile/group_type.html
+++ b/src/main/webapp/WEB-INF/views/modules/mobile/group_type.html
@@ -147,7 +147,7 @@
 				},
 				showDetailData:function(groupId){
 					//window.location.href = "${request.contextPath}/crewDetailed/showDetailData?groupId="+groupId;
-					parent.location.href ='group_data_detail.html';
+					//parent.location.href ='group_data_detail.html';
 				},
 				toMyInfo: function(){
 					window.location.href = "${request.contextPath}/baspatient/toMyInfo";
