临时去掉额定转速

--- a/src/main/webapp/WEB-INF/views/modules/mobile/group_type.html
+++ b/src/main/webapp/WEB-INF/views/modules/mobile/group_type.html
@@ -42,7 +42,7 @@
 				<h5 class="card-subtitle" typeId="129"></h5>
 				<h5 class="card-subtitle" typeId="130"></h5>
 				
-				<h5 class="card-subtitle">额定转速</h5>
+				<!-- <h5 class="card-subtitle">额定转速</h5> -->
 				<h5 class="card-subtitle" typeId="169"></h5>
 				<h5 class="card-subtitle" typeId="170"></h5>
 				
